Updated BE code